@@ -1,3 +1,11 @@
+2005-12-31  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion-windowsmedia.spec.in:
+	  update
+	* flumotion/component/wma/wma.py:
+	* flumotion/component/wmv/wmv.py:
+	  fix syntax errors
+
 2005-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/asf/asf.py:
